tests/invalid/SetIntersect_Invalid_2.whiley
method main() -> {int}:
    {{int}} ys = {{1, 2}, {1}}
    {int} xs = {1, 2, 3, 4}
    return f(xs & ys)
